<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:contentDescription="@string/contenDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_background_top" />

    <ImageView
        android:id="@+id/iv_btn_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/back_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/holder"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ic_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toBottomOf="@id/iv_btn_back"
        app:layout_constraintStart_toStartOf="@id/iv_btn_back"
        >

        <ImageView
            android:layout_margin="8dp"
            android:id="@+id/iv_registrasi"
            android:layout_width="47dp"
            android:layout_height="47dp"
            app:srcCompat="@drawable/warta"
            android:contentDescription="@string/holder"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_acara_header"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cv_ic_register"
        app:layout_constraintTop_toTopOf="@id/cv_ic_register"
        app:layout_constraintBottom_toBottomOf="@id/cv_ic_register"
        android:layout_marginStart="16dp"
        style="@style/black32spBold"
        android:text="@string/wartaJemaat"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_acara_header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ScrollViewCount">

            <LinearLayout
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_topik_minggu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/topik_minggu"
                        android:layout_marginBottom="8dp"
                        style="@style/black14sp"
                        android:layout_weight="4"
                        />

                    <Button
                        android:id="@+id/btn_ubah_topik_minggu"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/ubah"
                        style="@style/white10sp"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_pelean_ibadah"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pelean_ibadah"
                        android:layout_marginBottom="8dp"
                        style="@style/black14sp"
                        android:layout_weight="4"
                        />

                    <Button
                        android:id="@+id/btn_pelean_ibadah_ubah"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/ubah"
                        style="@style/white10sp"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_pelean_ia"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pelean_ia"
                        android:layout_marginBottom="8dp"
                        style="@style/black14sp"
                        android:layout_weight="4"
                        />

                    <Button
                        android:id="@+id/btn_pelean_ia"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/ubah"
                        style="@style/white10sp"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_pelean_ib"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pelean_ib"
                        android:layout_marginBottom="8dp"
                        style="@style/black14sp"
                        android:layout_weight="4"
                        />

                    <Button
                        android:id="@+id/btn_pelean_ib"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/ubah"
                        style="@style/white10sp"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_pelean_ii"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pelean_ii_namarboho"
                        android:layout_marginBottom="8dp"
                        style="@style/black14sp"
                        android:layout_weight="4"
                        />

                    <Button
                        android:id="@+id/btn_ubah_pelean_ii"
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/ubah"
                        style="@style/white10sp"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginVertical="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/merah"
                        android:text="@string/hapus" />

                    <Button
                        android:id="@+id/btn_tambah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/hijau"
                        android:text="@string/tambah"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>